--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -7,7 +7,8 @@ body, html {
 }
 
 #homeIcon {
-  justify-self: start;
+  display: flex;
+  justify-self: center;
   font-size: 40px;
   font-weight:700;
   align-items: center;
