update : maj du formulaire de création d'une collecte

--- a/frontend/css/form.css
+++ b/frontend/css/form.css
@@ -1,4 +1,4 @@
-#newCollectForm{
-    display : flex;
-    flex-direction : column;
-};
+#newCollectForm {
+    display: none;
+    flex-direction: column;
+}
