--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -115,3 +115,27 @@ header {
   height: 100px;
   width: 100px;
 }
+
+/* DASHBOARD CSS A ETE COLLE ICI */
+
+table {
+    border-collapse: collapse;
+}
+
+tr {
+    border: 1px solid black;
+}
+
+th {
+  text-align: left;
+  padding: 10px 10px;
+}
+
+th:last-child {
+    text-align: center;
+}
+
+#newCollectForm {
+    display: none;
+    flex-direction: column;
+}
