--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -349,10 +349,10 @@ table {
 }
 
 tr {
-  border: 1px solid black;
+  border: 1px solid #ccc;
 }
 
-th {
+th, td {
   text-align: left;
   padding: 10px 10px;
 }
